--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
@@ -8,8 +8,9 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-<script type="text/javascript">
+<script src="~/Scripts/ScriptsGenerales.js"></script>
 
+<script type="text/javascript">
     $(function() {
         $("#IdSucursal").change(function () {
             GetListBancoPorSucursal();
@@ -289,25 +290,11 @@
     }
 
     function Imprimir() {
-        var datos = {
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("ObtenerURL", "Empresa", new { Area = "General" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                                var win = window.open(data +"/FixedERP/Reportes/BancoReportes/BAN_006?IdEmpresa="+@Model.IdEmpresa+"&IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble+"&IdBanco="+@Model.IdBanco, '_blank');
-                win.focus();
-            },
-            error: function (error) {
-            }
-        });
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/BancoReportes/BAN_006?IdEmpresa="+@Model.IdEmpresa+"&IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble+"&IdBanco="+@Model.IdBanco, '_blank');
+        win.focus();
     }
+
 </script>
 
 @using (Html.BeginForm("Modificar", "ChequeBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
@@ -412,15 +399,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-offset-4 col-md-1">
-                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
-            </div>
-            <div class="col-md-1">
-                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","ChequeBanco",new { Area = "Banco", IdEmpresa = Model.IdEmpresa },null)">
-                    <i class="fa fa-plus"></i>
-                </a>
+            <div class="col-md-2">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                    &nbsp;&nbsp;
+                    <a type="button" class="btn btn-primary" href="@Url.Action("Nuevo","ChequeBanco",new { Area = "Banco", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
