--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Modificar.cshtml
@@ -8,6 +8,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script src="~/Scripts/ScriptsGenerales.js"></script>
+
 <script type="text/javascript">
     function armar_diario() {
         var caja = $("#IdCaja").val();
@@ -93,15 +95,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-offset-5 col-md-1">
-                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
-            </div>
-            <div class="col-md-1">
-                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","CajaMovimientoIngreso",new { Area = "Caja", IdEmpresa = Model.IdEmpresa },null)">
-                    <i class="fa fa-plus"></i>
-                </a>
+            <div class="col-md-2">
+                <label for="IdImprimir"></label>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                    &nbsp;&nbsp;
+                    <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","CajaMovimientoIngreso",new { Area = "Caja", IdEmpresa = Model.IdEmpresa },null)">
+                        <i class="fa fa-plus"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -204,25 +208,12 @@
     });
 
     function Imprimir() {
-        var datos = {
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("ObtenerURL", "Empresa", new { Area = "General" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                var win = window.open(data+"/Reportes/CajaReportes/CAJ_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
-            },
-
-            error: function (error) {
-            }
-        });
+        var location = GetPathServer();
+        console.log(location);
+        var win = window.open(location+"/Reportes/CajaReportes/CAJ_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
+        win.focus();
     }
+
 
     $("#IdTipoPersona").change(function () {
         IdEntidad.SetValue(null);
