--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Nuevo.cshtml
@@ -316,7 +316,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                <button type="button" class="btn btn-primary" id="btn_buscar" onclick="MostrarModal();">
+                <button type="button" class="btn btn-primary" title="Buscar facturas" id="btn_buscar" onclick="MostrarModal();">
                     <i class="fa fa-search"></i>
                 </button>
             </div>
