--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Modificar.cshtml
@@ -14,8 +14,19 @@
             </h4>
         </div>
     }
+
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script src="~/Scripts/ScriptsGenerales.js"></script>
 
 <script>
     function op_con_saldo() {
@@ -39,7 +50,7 @@
     var selectedIDs;
     function OnBeginCallback(s, e) {
         //Pass all selected keys to GridView callback action
-        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();    
+        e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();
         e.customArgs["selectedIDs"] = selectedIDs;
     }
     function OnSelectionChanged(s, e) {
@@ -77,6 +88,11 @@
         });
     }
 
+    function Imprimir() {
+        var location = GetPathServer();
+        var win = window.open(location +"/Reportes/CuentasPorPagarReportes/CXP_003?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipoCbte="+@Model.IdTipoCbte_Nota+"&IdCbteCble="+@Model.IdCbteCble_Nota, '_blank');
+        win.focus();
+    }
 </script>
 @using (Html.BeginForm("Modificar", "NotaCredito", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
@@ -174,14 +190,25 @@
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="col-md-1">
                 <div class="form-group">
                     <label for="IdCliente"></label>
-                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarProveedor();">
+                    <button type="button" class="btn btn-primary" title="Modificar proveedor" onclick="CrearModificarProveedor();">
                         <i class="fa fa-external-link-square"></i>
                     </button>
                 </div>
+            </div>            
+        </div>
+        <div class="col-md-offset-4 col-md-2">
+            <label for="IdImprimir"></label>
+            <div class="form-group">                
+                <button type="button" class="btn btn-primary" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+                &nbsp;&nbsp;
+                <a type="button" class="btn btn-primary" title="Nuevo" href="@Url.Action("Nuevo","NotaCredito",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                    <i class="fa fa-plus"></i>
+                </a>
             </div>
         </div>
         <div class="row" id="div_tipo">
