--- a/ERP/Core.Erp.Web/Views/Account/Login.cshtml
+++ b/ERP/Core.Erp.Web/Views/Account/Login.cshtml
@@ -45,7 +45,8 @@
         }
         <div class="login-box">
             <div class="login-logo">
-                <a href="#"><b>Fixed</b>ERP</a>
+                @*<a href="#"><b>Fixed</b>ERP</a>*@
+                <img src="~/AdminLTE/dist/img/logo.png">
             </div>
             <!-- /.login-logo -->
             <div class="login-box-body">
@@ -62,7 +63,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <button type="submit" class="btn btn-primary btn-block btn-flat">Iniciar sesión</button>
+                            <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
                         </div>
                     </div>
 
