--- a/ERP/Core.Erp.Web/Views/Account/LoginEmpresa.cshtml
+++ b/ERP/Core.Erp.Web/Views/Account/LoginEmpresa.cshtml
@@ -35,7 +35,8 @@
     {
         <div class="login-box">
             <div class="login-logo">
-                <a href="#"><b>Fixed</b>ERP</a>
+                @*<a href="#"><b>Fixed</b>ERP</a>*@     
+                <img src="~/AdminLTE/dist/img/logo.png">           
             </div>
             <!-- /.login-logo -->
             <div class="login-box-body">
@@ -56,7 +57,7 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Aceptar</button>
+                        <button type="submit" class="btn btn-primary btn-block">Aceptar</button>
                     </div>
                 </div>
 
